--- a/package.json
+++ b/package.json
@@ -44,5 +44,7 @@
     "postcss-syntax": "^0.36.2",
     "sass": "^1.43.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-data": "^1.3.1"
+  }
 }
